RESOLVED FIXED12135
REGRESSION: <input> and <textarea> not focused on right click
https://bugs.webkit.org/show_bug.cgi?id=12135
Summary REGRESSION: <input> and <textarea> not focused on right click
Matt Lilek
Reported 2007-01-05 22:35:29 PST
<input> and <textarea> elements don't recieve focus when right clicked with the new context menus. The context menu displayed is the default one only without the reload option.
Attachments
Matt Lilek
Comment 1 2007-01-05 22:39:33 PST
This also seems to apply to ContentEditable elements.
Darin Adler
Comment 2 2007-01-11 09:17:22 PST
Note that with AppKit text fields, we used to select the word that you right-clicked on (possibly related to the spell checking UI).
Beth Dakin
Comment 3 2007-01-11 10:44:22 PST
Fixed with r18769. This is in Radar as 4908884.
Note You need to log in before you can comment on or make changes to this bug.