        Reviewed by Adam.

Fix for http://bugs.webkit.org/show_bug.cgi?id=12135 REGRESSION:
        <input> and <textarea> not focused on right click (4908884 in
        Radar)

        * page/EventHandler.cpp:
        (WebCore::EventHandler::sendContextMenuEvent): Ask if we *have*
        swallowed the event instead of if we *haven't* when deciding to
        perform a selection.


Canonical link: https://commits.webkit.org/15781@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18769 268f45cc-cd09-0410-ab3c-d52691b4dbfc