WebCore/page/EventHandler.cpp
@@ -1121,7 +1121,7 @@ bool EventHandler::sendContextMenuEvent(PlatformMouseEvent event)
     MouseEventWithHitTestResults mev = doc->prepareMouseEvent(HitTestRequest(false, true), viewportPos, event);
     
     swallowEvent = dispatchMouseEvent(contextmenuEvent, mev.targetNode(), true, 0, event, true);
-    if (!swallowEvent && !m_frame->selectionController()->contains(viewportPos) &&
+    if (swallowEvent && !m_frame->selectionController()->contains(viewportPos) &&
             (m_frame->editor()->selectWordBeforeMenuEvent() || m_frame->editor()->clientIsEditable()
             || (mev.targetNode() && mev.targetNode()->isContentEditable()))) {
         m_mouseDownMayStartSelect = true; // context menu events are always allowed to perform a selection
